--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "cd backend && npm run dev",
     "client": "cd frontend && npm run dev",
     "install-all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "build": "cd frontend && npm run build",
+    "build": "cd backend && npm run build",
     "start": "cd backend && npm start"
   },
   "keywords": ["tienda", "ecommerce", "react", "nodejs", "vite"],
